fix GH_TOKEN Var Name

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -36,4 +36,4 @@ jobs:
             electron-app/dist/*.yml
             electron-app/dist/*.nupkg
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
