--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -37,3 +37,4 @@ jobs:
             electron-app/dist/*.nupkg
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
