add new release ps1 and add GH TOKEN VAR again

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -43,3 +43,4 @@ jobs:
             CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
